--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-test-renderer": "^16.4.2"
+    "react-test-renderer": "^16.4.2",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
