--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-test-renderer": "^16.4.2",
+    "redux": "^4.0.0",
     "toastr": "^2.1.4"
   },
   "scripts": {
