--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "1.1.4",
     "react-test-renderer": "^16.4.2",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "toastr": "^2.1.4"
   },
   "scripts": {
